@@ -113,6 +113,7 @@
 	define('CONDITION_TYPE_DSTATUS',	10);
 	define('CONDITION_TYPE_DUPTIME',	11);
 	define('CONDITION_TYPE_DVALUE',		12);
+	define('CONDITION_TYPE_HOST_TEMPLATE',	13);
 
 	define('CONDITION_OPERATOR_EQUAL',	0);
 	define('CONDITION_OPERATOR_NOT_EQUAL',	1);
