@@ -283,7 +283,8 @@ typedef enum
 	CONDITION_TYPE_DSERVICE_PORT,
 	CONDITION_TYPE_DSTATUS,
 	CONDITION_TYPE_DUPTIME,
-	CONDITION_TYPE_DVALUE
+	CONDITION_TYPE_DVALUE,
+	CONDITION_TYPE_HOST_TEMPLATE
 } zbx_condition_type_t;
 
 /* Condition operators */
